css overflow fix and some astetic changes

--- a/static/style.css
+++ b/static/style.css
@@ -20,3 +20,14 @@ body{
 .stuff{
     text-align: center;
 }
+.comm{
+    margin-right: 30%;
+    margin-left: 30%;
+    text-align: center;
+    overflow: visible;
+    word-wrap: break-word;
+}
+.hcomm{
+    margin-left: 3em;
+    margin-bottom: 2em;
+}
